--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -20,7 +20,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
@@ -32,14 +31,6 @@
 </head>
 
 <body>
-<!-- Spinner Start -->
-<div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-    <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-        <span class="sr-only">Loading...</span>
-    </div>
-</div>
-<!-- Spinner End -->
-
 
 <!-- Navbar Start -->
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
@@ -70,7 +61,6 @@
 </nav>
 <!-- Navbar End -->
 
-
 <!-- Header Start -->
 <div class="container-fluid bg-primary py-5 mb-5 page-header">
     <div class="container py-5">
@@ -89,7 +79,6 @@
     </div>
 </div>
 <!-- Header End -->
-
 
 <!-- Sign Up Start -->
 <div class="container-xxl py-5">
@@ -113,24 +102,24 @@
                 </div>
             </div>
             <div class="col-lg-8 col-md-12 wow fadeInUp" data-wow-delay="0.3s">
-                <form>
+                <form id="signupForm">
                     <div class="row g-3">
                         <div class="col-md-6">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                <label for="name">Your Name</label>
+                                <input type="text" class="form-control" id="signup-username" placeholder="Your Name">
+                                <label for="signup-username">Your Name</label>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-floating">
-                                <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                <label for="email">Your Email</label>
+                                <input type="email" class="form-control" id="signup-email" placeholder="Your Email">
+                                <label for="signup-email">Your Email</label>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-floating">
-                                <input type="password" class="form-control" id="password" placeholder="Password">
-                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="signup-password" placeholder="Password">
+                                <label for="signup-password">Password</label>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -144,6 +133,7 @@
                         </div>
                     </div>
                 </form>
+                <div id="signupResponse" class="text-center mt-4"></div>
                 <div class="text-center mt-4">
                     <p>Already have an account? <a href="login.html" class="text-primary">Login</a></p>
                 </div>
@@ -152,7 +142,6 @@
     </div>
 </div>
 <!-- Sign Up End -->
-
 
 <!-- Footer Start -->
 <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -234,10 +223,8 @@
 </div>
 <!-- Footer End -->
 
-
 <!-- Back to Top -->
 <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-
 
 <!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -249,6 +236,7 @@
 
 <!-- Template Javascript -->
 <script src="js/main.js"></script>
+<script src="script.js"></script>
 </body>
 
 </html>
