--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
-            <a href="./login.html" class="nav-item nav-link active">Login</a>
+            <a href="signup.html" class="nav-item nav-link active">Sign Up</a>
         </div>
     </div>
 </nav>
@@ -74,12 +74,12 @@
     <div class="container py-5">
         <div class="row justify-content-center">
             <div class="col-lg-10 text-center">
-                <h1 class="display-3 text-white animated slideInDown">Sign Up</h1>
+                <h1 class="display-3 text-white animated slideInDown">Login</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center">
                         <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
                         <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Sign Up</li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Login</li>
                     </ol>
                 </nav>
             </div>
@@ -89,67 +89,46 @@
 <!-- Header End -->
 
 
-<!-- Sign Up Start -->
+<!-- Login Start -->
 <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h6 class="section-title bg-white text-center text-primary px-3">Sign Up</h6>
-            <h1 class="mb-5">Create Your Account</h1>
+            <h6 class="section-title bg-white text-center text-primary px-3">Login</h6>
+            <h1 class="mb-5">Login With Your Account</h1>
         </div>
         <div class="row g-4">
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <h5>Join Us</h5>
-                <p class="mb-4">Create an account to access all our courses and resources. Fill in the form below to get started.</p>
-                <div class="d-flex align-items-center mb-3">
-                    <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary" style="width: 50px; height: 50px;">
-                        <i class="fa fa-user text-white"></i>
-                    </div>
-                    <div class="ms-3">
-                        <h5 class="text-primary">Account</h5>
-                        <p class="mb-0">Create your personal account</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-8 col-md-12 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="col-lg-12 col-md-12 wow fadeInUp" data-wow-delay="0.3s">
                 <form>
-                    <div class="row g-3">
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                <label for="name">Your Name</label>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-12 g-3">
                             <div class="form-floating">
                                 <input type="email" class="form-control" id="email" placeholder="Your Email">
                                 <label for="email">Your Email</label>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 g-3">
                             <div class="form-floating">
                                 <input type="password" class="form-control" id="password" placeholder="Password">
                                 <label for="password">Password</label>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <input type="password" class="form-control" id="confirm-password" placeholder="Confirm Password">
-                                <label for="confirm-password">Confirm Password</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <button class="btn btn-primary w-100 py-3" type="submit">Sign Up</button>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 g-3">
+                            <button class="btn btn-primary w-100 py-3" type="submit">Login</button>
                         </div>
                     </div>
                 </form>
                 <div class="text-center mt-4">
-                    <p>Already have an account? <a href="login.html" class="text-primary">Login</a></p>
+                    <p>Are you a new user? <a href="signup.html" class="text-primary">Sign Up</a></p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- Sign Up End -->
+<!-- Login End -->
 
 
 <!-- Footer Start -->
